--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
