--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "plant-shop",
   "version": "0.1.0",
+  "engines": {
+    "node": "13.11.0"
+  },
   "private": true,
   "dependencies": {
     "@stripe/react-stripe-js": "^1.1.2",
@@ -10,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.15.4",
     "google-maps-react": "^2.0.6",
+    "heroku": "^7.42.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -17,7 +21,6 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "styled-components": "^5.1.1",
     "uniqid": "^5.2.0"
   },
   "scripts": {
