--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "firebase": "^7.15.4",
     "google-maps-react": "^2.0.6",
     "heroku": "^7.42.1",
